Removing redundant min_lineheight variable

--- a/dmenu.1
+++ b/dmenu.1
@@ -118,7 +118,8 @@ specifies the width of dmenu.
 specifies the border width.
 .TP
 .BI \-h " height"
-specifies the height of dmenu lines.
+specifies the height of dmenu lines. If height is \-1 then the height will be 2.5 times that of the
+font height.
 .TP
 .BI \-p " text, -prompt text"
 defines the prompt to be displayed to the left of the input field.
