Breaking compatibility with upstream dmenu.
This changes:
   -w windowid to -e windowid for embed purposes and
   -z width to -w width for size purposes

The -z argument has been kept for setting the width for compatiblity
with the xyw patch which uses -z for setting the width (it used -w
before the embed option was introduced to dmenu).

--- a/dmenu.1
+++ b/dmenu.1
@@ -28,11 +28,11 @@ dmenu \- dynamic menu
 .IR offset ]
 .RB [ \-y
 .IR offset ]
-.RB [ \-z
+.RB [ \-w
 .IR width ]
 .RB [ \-m
 .IR monitor ]
-.RB [ \-w
+.RB [ \-e
 .IR windowid ]
 .RB [ \-fn
 .IR font ]
@@ -96,7 +96,7 @@ dmenu appears at the bottom of the screen.
 .B \-c
 dmenu appears in the center of the screen.
 .TP
-.BI \-w " windowid"
+.BI \-e " windowid"
 embed into windowid.
 .TP
 .BI \-m " monitor"
@@ -109,7 +109,7 @@ specifies the x position relative to monitor.
 .BI \-y " offset"
 specifies the y position relative to monitor.
 .TP
-.BI \-z " width"
+.BI \-w " width"
 specifies the width of dmenu.
 
 .SH APPEARANCE
