Adding navhistory keybindings to man page

--- a/dmenu.1
+++ b/dmenu.1
@@ -441,6 +441,12 @@ Page up
 .TP
 .B M\-l
 Down
+.TP
+.B M\-p
+Navigate to the previous item in the history file.
+.TP
+.B M\-n
+Navigate to the next item in the history file.
 .SH SEE ALSO
 .IR dwm (1),
 .IR stest (1)
