Adding dmenu padding similar to the barpadding patch for dwm

--- a/dmenu.1
+++ b/dmenu.1
@@ -254,6 +254,12 @@ enables Shift-Return and Ctrl-Return to allow dmenu to output more than one item
 .B \-v
 prints version information to stdout, then exits.
 .TP
+.BI \-xpad " offset"
+sets the horizontal padding value for dmenu.
+.TP
+.BI \-ypad " offset"
+sets the vertical padding value for dmenu.
+.TP
 .B \-Alpha
 enables transparency.
 .TP
