The -ps <index> command line option was missing from the man page

--- a/dmenu.1
+++ b/dmenu.1
@@ -202,6 +202,9 @@ comma separated list of high priority items.
 .BI \-it " text"
 starts dmenu with initial text already typed in.
 .TP
+.BI \-ps " index"
+preselect the item with the given index.
+.TP
 .B \-f
 dmenu grabs the keyboard before reading stdin if not reading from a tty. This
 is faster, but will lock up X until stdin reaches end\-of\-file.
