Adding optional fonts for selected and output items

--- a/dmenu.1
+++ b/dmenu.1
@@ -47,6 +47,10 @@ dmenu \- dynamic menu
 .IR windowid ]
 .RB [ \-fn
 .IR font ]
+.RB [ \-fns
+.IR font ]
+.RB [ \-fno
+.IR font ]
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -158,6 +162,12 @@ adjusts the angle and size of the powerline separator.
 .TP
 .BI \-fn " font"
 defines the font or font set used.
+.TP
+.BI \-fns " font"
+defines the selected item font or font set used.
+.TP
+.BI \-fno " font"
+defines the output item font or font set used.
 .TP
 .BI \-nb " color"
 defines the normal background color.
