Adding NoInput option to remove search option for simple select-to-choose only menus

--- a/dmenu.1
+++ b/dmenu.1
@@ -344,6 +344,12 @@ makes dmenu print out the current text each time a key is pressed.
 .B \-NoIncremental
 dmenu will not print out the current text each time a key is pressed.
 .TP
+.B \-Input
+enables input field allowing the user to search through the options.
+.TP
+.B \-NoInput
+disables the input field forcing the user to select options using mouse or keyboard.
+.TP
 .B \-Managed
 allows dmenu to be managed by a window manager.
 .TP
