--- a/dmenu.1
+++ b/dmenu.1
@@ -372,6 +372,12 @@ makes dmenu indent items at the same level as the prompt on multi-line views.
 .B \-NoPromptIndent
 items on multi-line views are not indented.
 .TP
+.B \-PromptVanish
+makes the prompt show initially, but disappear when text is entered.
+.TP
+.B \-NoPromptVanish
+prompt, if used, is always displayed.
+.TP
 .B \-ShowNumbers
 makes dmenu display the number of matched and total items in the top right corner.
 .TP
